devops/base/mongo/policy.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-mongo-replication
spec:
  # Allow the mongo pods to replicate
  podSelector:
    matchLabels:
      statefulset: mongodb
  ingress:
    - from:
        - podSelector:
            matchLabels:
              statefulset: mongodb
      ports:
        - protocol: TCP
          port: 27017
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-f5-ingress
spec:
  podSelector:
    matchLabels:
      statefulset: mongodb
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
